infrastructure/traefik/base/config/dashboard-root-redirect-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-root-redirect
  namespace: traefik
spec:
  redirectRegex:
    regex: "^https://traefik\\..+/$"
    replacement: "https://traefik.${DOMAIN}/dashboard/"
    permanent: true
