infrastructure/traefik/base/config/dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.${DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      services:
        - name: authentik-server
          namespace: auth
          port: http
    - match: Host(`traefik.${DOMAIN}`) && Path(`/`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-root-redirect
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
    - match: Host(`traefik.${DOMAIN}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      middlewares:
        - name: authentik
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
